[package]
name = "logseq-md-parser-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive", "env"] }
csv = "1.2.2"
flate2 = "1.0.26"
glob = "0.3.1"
lazy_static = "1.4.0"
regex = "1.8.4"
ulid = { version = "1.0.0", features = ["serde"] }
serde = "1"
serde_derive = "1"